# vci_ws_repo

can/: CMakeLists.txt  package.xml
can/src/: canlib.d  libcanlib.so.1.4.0  listener.cpp  talker.cpp
can/src/examples/: busparms  busstat  cancount  canfdmonitor  canfdwrite  canmonitor  listChannels  readTimerTest  simplewrite  timedomains  writeloop
ccamera_ros/: CMakeLists.txt  package.xml
ccamera_ros/include/ccamera/: ccamera-memory-cuda.h  ccamera-memory-dma.h  ccamera-pixel-format.h  ccamera.h
ccamera_ros/src/: ccamera_ros.cpp
darknet_ros_msgs/: CMakeLists.txt
darknet_ros_msgs/msg/: LaneParam.msg  LaneParams.msg  TrackingBox.msg  TrackingBoxes.msg
hmi_bridge/: CMakeLists.txt  package.xml
hmi_bridge/include/: CanUtils.hpp  Common.hpp  hmi_bridge.h  protocol_parse.hpp  radar_config.h  udp.hpp
hmi_bridge/launch/: debug.launch
hmi_bridge/src/: hmi_bridge.cpp  hmi_bridge_node.cpp  protocol_parse.cpp  radar_config.cpp  radar_config_node.cpp  udp.cpp
perception/: CMakeLists.txt  package.xml
perception/include/: Common.hpp  perception_node.hpp
perception/launch/: debug.launch
perception/src/: perception_main.cpp  perception_node.cpp  perspective.cpp
sensor_data/: CMakeLists.txt  package.xml
sensor_data/include/: Calibrator.h  FindCorners.h  camera_wrapper.hpp  draw_calib_board.hpp  json.hpp  mouse_helper.hpp  offline_node.hpp  unicalibrator.hpp
sensor_data/launch/: sensor_data.launch
sensor_data/src/: Calibrator.cpp  FindCorners.cpp  main.cpp  offline_main.cpp  offline_node.cpp  unicalibrator.cpp
(+17 files in other folders)
